# cookiecutter

./: setup.cfg
cookiecutter/: generate.py
docs/advanced/: index.rst
