[metadata]
name = cookiecutter
url = https://github.com/cookiecutter/cookiecutter
project_urls =
  Bug Tracker = https://github.com/cookiecutter/cookiecutter/issues
  CI: GitHub = https://github.com/cookiecutter/cookiecutter/actions
  Documentation = https://cookiecutter.readthedocs.io/
  Source Code = https://github.com/cookiecutter/cookiecutter
long_description = file: README.md
long_description_content_type = text/markdown
author = Audrey Feldroy
author_email = audreyr@gmail.com
maintainer = Audrey Feldroy
maintainer_email = audreyr@gmail.com
license = BSD
license_file = LICENSE

[options]
use_scm_version = True
python_requires = >=3.6
; package_dir =
;   = src
packages = cookiecutter
zip_safe = False

# These are required during `setup.py` run:
setup_requires =
  setuptools_scm>=1.15.0
  setuptools_scm_git_archive>=1.0

install_requires =
    binaryornot>=0.4.4
    Jinja2>=2.7,<4.0.0
    click>=7.0,<9.0.0
    pyyaml>=5.3.1
    jinja2-time>=0.2.0
    python-slugify>=4.0.0
    requests>=2.23.0

[options.entry_points]
console_scripts =
  cookiecutter = cookiecutter.__main__:main

[flake8]
ignore = BLK100,E231,W503

# Excludes due to known issues or incompatibilities with black:
# BLK100: Black would make changes. https://pypi.org/project/flake8-black/
# W503: https://github.com/psf/black/search?q=W503&unscoped_q=W503
# E231: https://github.com/psf/black/issues/1202

statistics = 1
# black official is 88
max-line-length = 88

[bdist_wheel]
universal = false

[tool:pytest]
testpaths = tests
addopts = -vvv --cov-report term-missing --cov=cookiecutter

[doc8]
# TODO: Remove current max-line-lengh ignore in follow-up and adopt black limit.
# max-line-length = 88
ignore = D001
